...
          backgroundImage: AssetImage('assets/images/profile.png'),
        ),
        SizedBox(width: 20),
        Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            Text("HELLO,", style: TextStyle(fontWeight: FontWeight.bold, fontSize: 18)),
            Text("USER", style: TextStyle(fontWeight: FontWeight.bold, color: const Color.fromARGB(255, 196, 24, 104), fontSize: 15)),
          ],
        ),
      ],
    );
  }
...
